apps/base/homepage/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage.homelab.cs-ol.de
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`homepage.homelab.cs-ol.de`)
      services:
        - kind: Service
          name: homepage
          port: 3000
          sticky:
            cookie:
              httpOnly: true
              secure: true
              sameSite: none
